--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,43 @@ html, body {
     height: 100%;
 }
 
+body{
+    background-color: rgba(130, 167, 167, 0.827);
+}
+
+hr {
+    background-color: rgba(0, 0, 0, 0.378);
+}
+
 .hide {
     display: none;
 }
 
-#find {
-    left: 50%;
-    top: 30%;
+.table {
+    background: none;
+    margin: 2%;
+  margin-left: 14%;
+}
+
+
+#find{
+    left: 49%;
+    top: 50%;
+    background-color: lightgrey;
+}
+
+#search-input {
+    margin-top: 2%;
+   padding-left: 50%;
+}
+
+#check {
+    margin-left: 50%;
+    margin-top: 2%;
+    background: lightgrey;
+}
+
+#map {
+    opacity: 0.2;
+    padding-top: 2%;
 }
