--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,8 @@ hr {
   margin-left: 14%;
 }
 
-#find{
-    left: 49%;
-    top: 50%;
-    background-color: lightgrey;
+.results-title {
+    padding-top: 2%;
 }
 
 #search-input {
@@ -37,7 +35,26 @@ hr {
     background: lightgrey;
 }
 
-#map {
-    opacity: 0.2;
-    padding-top: 2%;
+#good {
+    color: green;
+}
+
+#moderate {
+    color: yellow;
+}
+
+#sensitive {
+    color: rgb(217, 145, 10);
+}
+
+#unhealthy {
+    color:orangered
+}
+
+#very-unhealthy {
+    color: rgb(143, 8, 66);
+}
+
+#hazardous {
+    color: rgb(90, 7, 43);
 }
