--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,3 +69,23 @@ hr {
 #hazardous {
   color: rgb(90, 7, 43);
 }
+
+#green {
+  color: green;
+}
+
+#orange {
+  color: orange;
+}
+
+#mid-orange {
+  color: rgb(218, 123, 16);
+}
+
+#dark-orange {
+  color: rgb(177, 97, 6);
+}
+
+#red {
+  color: red
+}
