--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,27 +1,47 @@
-html,
-body {
-  height: 100%;
+html {
+  max-height: 100%;
 }
+
 body {
   background-color: rgba(130, 167, 167, 0.827);
+  max-height: 100%;
 }
 
 hr {
   background-color: rgba(0, 0, 0, 0.378);
 }
 
+footer {
+  display: flex;
+  justify-content: center;
+}
+.index-html {
+  height: 100%;
+}
+
+.html-results {
+  height: auto;
+}
+
 .index-body {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   background-color: rgba(130, 167, 167, 0.827);
   background-image: url(../img/Fanhe_Town_10_day_interval_contrast.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-color: rgba(130, 167, 167, 0.827);
 }
 
-#home{
-  margin-left: 90%;
-  margin-top:2%;
+.section {
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-air {
+  padding-bottom: 4%;
 }
 
 .hide {
@@ -45,6 +65,17 @@ hr {
 
 .subtitle {
   text-decoration: underline;
+
+}
+
+#sticky-footer {
+  position: absolute;
+  bottom: 0;
+}
+
+#home{
+  margin-left: 90%;
+  margin-top:2%;
 }
 
 #air-results {
