--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,15 +89,24 @@ footer {
   font-weight: bold;
 }
 
+.input-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
+
 #state-select {
-  margin: 1.5%;
+  display: flex;
+  justify-content: center;
   width: 200px;
   height: 40px;
+  margin-left: 2px;
 }
 
 #search-input {
-  margin-top: 5%;
-  margin-left: 37%;
+  display: flex;
+  justify-content: center;
+  margin-right: 2px;
   width: 200px;
   height: 40px;
 }
@@ -114,7 +123,7 @@ footer {
 
 #index-title {
   margin-left:32%;
-  margin-top:16%;
+  margin-top:10%;
 }
 
 #good {
@@ -160,3 +169,91 @@ footer {
 #red {
   color: red
 }
+
+@media only screen and (max-width: 576px) {
+  .index-body {
+    background-position: 0, center ;
+  }
+
+  #search-input {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 50px;
+    margin-left: 0;
+    padding: 0;
+  }
+  #state-select {
+    margin-bottom: 0;
+    margin-top: 50px;
+  }
+
+  .section {
+    display: flex;
+    /* margin-top: 120px; */
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  #index-subtitle {
+  margin: auto;
+}
+
+#index-title {
+  margin: auto;
+}
+
+#check {
+  display: flex;
+  justify-content: center;
+  margin: 50px;
+}
+}
+
+@media only screen and (max-width: 768px) {
+  .index-body {
+    background-position: 0, center ;
+  }
+
+  #search-input {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-top: 50px;
+    margin-left: 0;
+    padding: 0;
+  }
+  #state-select {
+    margin-bottom: 0;
+    margin-top: 50px;
+  }
+
+  .section {
+    display: flex;
+    /* margin-top: 120px; */
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+  }
+
+  #index-subtitle {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+}
+
+#index-title {
+  display: flex;
+  justify-content: center;
+  margin-top: 100px;
+  margin-left: 0;
+}
+
+#check {
+  display: flex;
+  justify-content: center;
+  margin: 50px 200px;
+}
+}
+
