Retake final screenshot

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ footer {
 .results-body{
   background-image: url(../img/pollution-facts.png);
   background-repeat: no-repeat;
-  background-position: right top 40%;
+  background-position: right top 120px;
   background-size: 50%;
 }
 
